--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
             border-radius: 8px;
             background-color: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 90%;
+            max-width: 600px;
         }
-        h1 {
-            color: #333;
+        textarea {
+            width: 100%;
+            height: 200px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            margin-bottom: 20px;
+            font-size: 16px;
         }
         button {
             padding: 10px 20px;
@@ -42,12 +50,14 @@
 <body>
     <div class="container">
         <h1>텍스트 파일 다운로드</h1>
+        <textarea id="textInput" placeholder="여기에 텍스트를 입력하세요..."></textarea>
+        <br>
         <button id="downloadBtn">파일 다운로드</button>
     </div>
     <script>
         document.getElementById('downloadBtn').addEventListener('click', () => {
-            const text = "여기에 텍스트 내용을 입력하세요.";
-            const filename = 'example.txt';
+            const text = document.getElementById('textInput').value;
+            const filename = 'myfile.txt';
             const blob = new Blob([text], { type: 'text/plain' });
             const url = URL.createObjectURL(blob);
             const a = document.createElement('a');
