--- a/index.html
+++ b/index.html
@@ -23,14 +23,19 @@
             width: 90%;
             max-width: 600px;
         }
-        textarea {
+        input, textarea {
             width: 100%;
-            height: 200px;
             padding: 10px;
+            margin-bottom: 20px;
             border: 1px solid #ccc;
             border-radius: 4px;
-            margin-bottom: 20px;
             font-size: 16px;
+        }
+        input[type="text"] {
+            height: 40px;
+        }
+        textarea {
+            height: 200px;
         }
         button {
             padding: 10px 20px;
@@ -50,14 +55,16 @@
 <body>
     <div class="container">
         <h1>텍스트 파일 다운로드</h1>
-        <textarea id="textInput" placeholder="여기에 텍스트를 입력하세요..."></textarea>
+        <input type="text" id="titleInput" placeholder="제목을 입력하세요">
+        <textarea id="textInput" placeholder="내용을 입력하세요..."></textarea>
         <br>
         <button id="downloadBtn">파일 다운로드</button>
     </div>
     <script>
         document.getElementById('downloadBtn').addEventListener('click', () => {
+            const title = document.getElementById('titleInput').value;
             const text = document.getElementById('textInput').value;
-            const filename = 'myfile.txt';
+            const filename = title ? `${title}.txt` : 'myfile.txt';
             const blob = new Blob([text], { type: 'text/plain' });
             const url = URL.createObjectURL(blob);
             const a = document.createElement('a');
