--- a/index.html
+++ b/index.html
@@ -1,82 +1,85 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>텍스트 파일 다운로드</title>
+    <title>Simple Word Processor</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f4f4f9;
+            margin: 20px;
         }
         .container {
-            text-align: center;
-            padding: 20px;
-            border-radius: 8px;
-            background-color: #fff;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 90%;
-            max-width: 600px;
-        }
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-        input[type="text"] {
-            height: 40px;
+            max-width: 800px;
+            margin: auto;
         }
         textarea {
-            height: 200px;
+            width: 100%;
+            height: 300px;
+            margin-bottom: 20px;
+            padding: 10px;
+            box-sizing: border-box;
         }
         button {
             padding: 10px 20px;
             font-size: 16px;
-            color: #fff;
-            background-color: #007bff;
-            border: none;
-            border-radius: 4px;
             cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        button:hover {
-            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>텍스트 파일 다운로드</h1>
-        <input type="text" id="titleInput" placeholder="제목을 입력하세요">
-        <textarea id="textInput" placeholder="내용을 입력하세요..."></textarea>
-        <br>
-        <button id="downloadBtn">파일 다운로드</button>
+        <h1>Simple Word Processor</h1>
+        <form id="docForm">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" required style="width: 100%; padding: 10px; margin-bottom: 20px;">
+            
+            <label for="content">Content:</label>
+            <textarea id="content" name="content" required></textarea>
+            
+            <button type="button" onclick="generateDocx()">Save as .docx</button>
+        </form>
     </div>
+
+    <!-- Load docx library from CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/docx/7.0.5/docx.min.js"></script>
     <script>
-        document.getElementById('downloadBtn').addEventListener('click', () => {
-            const title = document.getElementById('titleInput').value;
-            const text = document.getElementById('textInput').value;
-            const filename = title ? `${title}.txt` : 'myfile.txt';
-            const blob = new Blob([text], { type: 'text/plain' });
+        async function generateDocx() {
+            const title = document.getElementById('title').value;
+            const content = document.getElementById('content').value;
+
+            if (!title || !content) {
+                alert('Please enter both a title and content.');
+                return;
+            }
+
+            // Create a new document
+            const doc = new docx.Document({
+                sections: [
+                    {
+                        properties: {},
+                        children: [
+                            new docx.Paragraph({
+                                text: title,
+                                heading: docx.HeadingLevel.HEADING_1,
+                            }),
+                            new docx.Paragraph({
+                                text: content,
+                            }),
+                        ],
+                    },
+                ],
+            });
+
+            // Generate the document
+            const blob = await docx.Packer.toBlob(doc);
             const url = URL.createObjectURL(blob);
             const a = document.createElement('a');
             a.href = url;
-            a.download = filename;
-            document.body.appendChild(a);
+            a.download = `${title}.docx`;
             a.click();
-            setTimeout(() => {
-                document.body.removeChild(a);
-                window.URL.revokeObjectURL(url);
-            }, 0);
-        });
+            URL.revokeObjectURL(url);
+        }
     </script>
 </body>
 </html>
