--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
     <style>
-        .nanum-gothic-regular {
+        input, div,bady, button{
   font-family: "Nanum Gothic", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: #f0f0f0;
             margin: 0;
             padding: 0;
