--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>리모오피스 - 간단한 워드 프로세서</title>
+    <title>리모오피스 - 간단한 워드프로세서</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
@@ -124,13 +124,18 @@
             });
 
             // Generate the document
-            const blob = await docx.Packer.toBlob(doc);
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = `${title}.docx`;
-            a.click();
-            URL.revokeObjectURL(url);
+            try {
+                const blob = await docx.Packer.toBlob(doc);
+                const url = URL.createObjectURL(blob);
+                const a = document.createElement('a');
+                a.href = url;
+                a.download = `${title}.docx`;
+                a.click();
+                URL.revokeObjectURL(url);
+            } catch (error) {
+                console.error('문서 생성 중 오류 발생:', error);
+                alert('문서 생성 중 오류가 발생했습니다.');
+            }
         }
     </script>
 </body>
